[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Jump.wav" type="AudioStream" id=4]
[ext_resource path="res://Prefabs/chr.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/PixappInter.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sounds/Hit.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sprites/e_key.png" type="Texture" id=8]
[ext_resource path="res://Sprites/cr_warn.png" type="Texture" id=9]
[ext_resource path="res://Sprites/aim.png" type="Texture" id=10]
[ext_resource path="res://Joystick/Joystick.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/Controls/lineLight12.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Controls/lineLight50.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.9978, 32 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.352941 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.603922, 0, 0, 1 )

[sub_resource type="Theme" id=4]
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 2 )
ProgressBar/styles/fg = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 54
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 36
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=7]
resource_name = "show"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -1280, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("chr:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=9]
resource_name = "open"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "rot"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
joystickLeftPath = NodePath("CanvasLayer/Controls/MoveJoy")
joystickRightPath = NodePath("CanvasLayer/Controls/ShootJoy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="chr" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 13 )
character = 2

[node name="weapon" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 10 )
of_player = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.396851
margin_top = 0.33374
margin_right = -0.396851
margin_bottom = 0.33374
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -37.0
margin_right = 291.0
theme = SubResource( 4 )
max_value = 200.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.396851
margin_top = 0.33374
margin_right = -0.396851
margin_bottom = 0.33374
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossHP" type="ProgressBar" parent="CanvasLayer/Control2"]
visible = false
anchor_right = 1.0
margin_bottom = 8.0
theme = SubResource( 4 )
max_value = 200.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicInfo" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1280.0
margin_right = -1280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="CanvasLayer/MusicInfo"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -164.0
margin_right = 577.0
margin_bottom = -115.0
custom_fonts/font = SubResource( 5 )
text = "Classic Masked Robbery"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="author" type="Label" parent="CanvasLayer/MusicInfo"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -106.0
margin_right = 167.0
margin_bottom = -72.0
custom_fonts/font = SubResource( 6 )
text = "GLWZBLL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/MusicInfo"]
anims/show = SubResource( 7 )

[node name="warn" type="TextureRect" parent="CanvasLayer/MusicInfo"]
visible = false
margin_left = 37.0
margin_top = 511.0
margin_right = 92.0
margin_bottom = 544.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveJoy" parent="CanvasLayer/Controls" instance=ExtResource( 11 )]
margin_left = 39.6628
margin_top = -333.688
margin_right = 339.663
margin_bottom = -33.6885

[node name="ShootJoy" parent="CanvasLayer/Controls" instance=ExtResource( 11 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -330.161
margin_top = -333.335
margin_right = -30.1606
margin_bottom = -33.3354
_pressed_color = Color( 0.74902, 0.74902, 0.74902, 1 )

[node name="Pause" type="Control" parent="CanvasLayer/Controls"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/Controls/Pause"]
position = Vector2( 1207.2, 0.649332 )
scale = Vector2( 1.5014, 1.5014 )
normal = ExtResource( 12 )
action = "pause"

[node name="Use" type="Control" parent="CanvasLayer/Controls"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1280.0
margin_top = -361.682
margin_bottom = 358.318
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/Controls/Use"]
position = Vector2( 1173.22, 256.101 )
scale = Vector2( 1.2973, 1.2973 )
normal = ExtResource( 13 )
action = "use"

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="hand" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 70, 0 )

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Sound"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 8 )

[node name="key" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="key"]
anims/open = SubResource( 9 )

[node name="cursor" type="Node2D" parent="."]
z_index = 6

[node name="Sprite" type="Sprite" parent="cursor"]
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="cursor/Sprite"]
autoplay = "rot"
anims/rot = SubResource( 10 )

[node name="hurtTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="head" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -34 )

[node name="foot" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 30 )
[connection signal="timeout" from="hurtTimer" to="." method="_on_hurtTimer_timeout"]
